[BeOS]Bug 315576, fixing event order for fast processors, p=doug@sheltonfamily.org, r=thesuckiestemail@yahoo.se. BeOS-only, no sr required